TestCases/LLVMTests/SyntaxErrorTests/tests/test46.c
typedef const char const int;

int main(){
    return 0;
};